Flattened the function by breaking it by a superficial condition.